<resources>
    <string name="app_name">The Investor</string>
    <string name="password">password</string>
    <string name="email_id">email</string>
    <string name="login">Log In</string>
    <string name="loading">Loading…</string>
    <string name="complete">Complete!</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_any_account">Already have any Account ?</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="with_your_email_id">With your Email-id</string>
    <string name="sign_up">SignUp</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="username">Username</string>
    <string name="don_t_have_a_account">Don\'t have a Account ?</string>
    <string name="invalid_email">Please enter email address</string>
    <string name="valid_email">Please enter valid email address</string>
    <string name="invalid_password">Please enter password</string>
    <string name="invalid_first_name">Please enter first name</string>
    <string name="invalid_last_name">Please enter last name</string>
    <string name="invalid_mobile">Please enter mobile</string>
    <string name="invalid_confirm_password">Please enter confirm password</string>
    <string name="password_should_be_same">Password should be same</string>
    <string name="invalid_password_length">Password length must be between 4–15 characters.</string>
    <string name="invalid_device_token">Invalid device token</string>
    <string name="invalid_device_id">Invalid device id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_in_select_your_commodity">Type in and select your Commodity below :</string>
    <string name="type_here">Type here</string>
    <string name="value_in_us_dollor">Value in US$</string>
    <string name="actual_weight">Actual Weight</string>
    <string name="enter_here">Enter here</string>
    <string name="reset">Reset</string>
    <string name="nr_charges">NR Charges</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="insurance">Insurance</string>
    <string name="total_nr">Total NR $</string>
    <string name="customs_charges">Customs Charges</string>
    <string name="customs_duty">Customs Duty</string>
    <string name="rate">Rate</string>
    <string name="service_charge">Service Charge</string>
    <string name="total_customs">Total Customs : </string>
    <string name="value_added_tax">Value Added Tax</string>
    <string name="total_estimate">Total Estimate $ </string>
    <string name="customer_information">Customer Information</string>
    <string name="account">Account</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="requested_by">Requested By</string>
    <string name="collection_location">Collection Location</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="address_line_one">Address (line 1)</string>
    <string name="address_line_two">Address (line 2)</string>
    <string name="city">City</string>
    <string name="state">State/Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="update_your_contact_information_here">Update your contact information here</string>
    <string name="fax">Fax</string>
    <string name="wesite">Website</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="logout">Logout</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="collection_time">Collection Time</string>
    <string name="choose_date">Choose Date</string>
    <string name="to">To</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="time_shown_as">Time Shown as(UTC-04:00) Atlantic Time (Canada)</string>
    <string name="options">Options</string>
    <string name="description">Description</string>
    <string name="reference">Reference</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="declare_value">Declare Value</string>
    <string name="quantity">Quantity</string>
    <string name="wright">Weight</string>
    <string name="service">Service</string>
    <string name="length">Length</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="submit_order_now">Submit Order Now</string>
    <string name="show_detail">Show Detail</string>
    <string name="paid">Paid</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="total_amount">Total Amount</string>
    <string name="due_date">Due Date</string>
    <string name="balance_due">Balance Due</string>
    <string name="tracking_number">Tracking Number : </string>
    <string name="current_status">Current Status : </string>
    <string name="date_submitted">Date Submitted : </string>
    <string name="service_level">Service Level : </string>
    <string name="requested_by1">Requested by : </string>
    <string name="total_cost">Total Cost : </string>
    <string name="description1">Description : </string>
    <string name="weight">Weight : </string>
    <string name="collection_location1">Collection location</string>
    <string name="delivery_location1">Delivery location</string>
    <string name="distance">Distance : </string>
    <string name="collection_from">Collected from : </string>
    <string name="actual_collection_time">Actual collection time</string>
    <string name="collection_signature">Collection Signature</string>
    <string name="delivery_from">Delivered from : </string>
    <string name="actual_delivery_time">Actual delivery time</string>
    <string name="delivery_signature">Delivery Signature</string>
    <string name="view_shipping_label">View Shipping Label</string>
    <string name="view_waybill">View Waybill</string>
    <string name="view_bill_of_landing">View Bill of Landing</string>


</resources>