<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.home.GetAQuoteFragment">

        <include
            android:id="@+id/header_lay"
            layout="@layout/header_layout_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_lay"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/rounded_gray_bg">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:weightSum="1"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".4"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/invoice_date"
                        android:textColor="@color/color_primary"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/tvInvoiceDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".6"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".4"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/total_amount"
                        android:textColor="@color/color_primary"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/tvTotalAmount"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".6"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".4"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/due_date"
                        android:textColor="@color/color_primary"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/tvDueDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".6"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".4"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/balance_due"
                        android:textColor="@color/color_primary"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/tvBalanceDue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".6"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".4"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/paid"
                        android:textColor="@color/color_primary"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/tvPaid"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".6"
                        android:background="@null"
                        android:padding="@dimen/_5sdp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>




                <TextView
                    android:id="@+id/tvStatus"
                    android:background="@color/color_primary"
                    app:cornerRadius="@dimen/_7sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:elevation="@dimen/_3sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
               />



            </LinearLayout>


        </ScrollView>


    </RelativeLayout>
</layout>